# EEC

./: .gitignore  README.md  ai_standings_logger.py  codebase_cleaner.py  driver_swaps.csv  eec_calendar.py  eec_db.py  eec_teams.py  ensure_dependencies.py  lap_delta_logger.py  live_standings_overlay.html  minimal_logger_gui.py  package-lock.json  package.json  pitstop_log.csv  pitstop_logger_enhanced.py  pyproject.toml  race_data_runner.py  race_gui.py  race_gui.spec  requirements.txt  roster_ui.py  setup.sh  sorted_standings.csv  standings.css  standings.html  standings.js  standings_log.csv  standings_sorter.py  teams_tab.py
RaceLogs/: ai_roster_update_20250605.csv  pitstop_log.csv  sorted_standings.csv
SpecMaps/: active_car_Alisaie_spec_crimson_resolve.mip  active_car_Alphinaud_spec_aetherion_pearl.mip  active_car_emet_spec_eclipse_requiem.mip  active_car_emet_v2.mip  active_car_hythlo_spec_silent_hymn.mip  active_car_spec_wod_liquid_shadow.mip  active_car_steppe_sadu_spec_storm_huntress.mip  car_Alisaie_spec_fencers_flair_v6.mip  car_Alphinaud_spec_twin_adjudicator.mip  car_hythlo_spec_eclipse_requiem.mip  car_magnai_spec_eternal_eclipse.mip  car_magnai_spec_solar_flare.mip  car_spec_wod_stealth_sparks.mip  car_steppe_sadu_spec_sun_forged_fury.mip  celestia_spec_neon_mirror_burst_v2.mip  celestia_spec_neon_mirror_burst_v2.tga  elidibus.mip  elidibus.tga  erenville.mip  erenville.tga  gaius_spec_blackened_iron_metallic.mip  gaius_spec_crimson_shadow_chrome.mip  gaius_spec_nightfall_copper.mip  hildibrand_spec_millionaire_chrome.mip  hildibrand_spec_velvet_au.mip  (+25 more)
(+22 files in other folders)
